Revert "Fix Services section card readability on hover"
This reverts commit 32dfa3bd5d128b9738ccddbbd93e78f26abccf15.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,7 +587,6 @@ section {
 
 #services .box .icon {
   float: left;
-  transform: rotateX(0deg);
 }
 
 #services .box .icon i {
